# Generated by Django 6.0.4 on 2026-05-21 20:30

import core.services
import datetime
import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('core', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Secretaria',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('matricula', models.CharField(db_index=True, editable=False, max_length=30, unique=True, verbose_name='Matrícula')),
                ('nome', models.CharField(max_length=255, verbose_name='Nome')),
                ('email', models.EmailField(max_length=254, verbose_name='E-mail')),
                ('senha', models.CharField(max_length=255, verbose_name='Senha')),
                ('unidade', models.CharField(choices=[('barra', 'Barra'), ('botafogo', 'Botafogo')], max_length=15)),
            ],
            options={
                'verbose_name': 'Secretária',
                'verbose_name_plural': 'Secretárias',
            },
        ),
        migrations.AddField(
            model_name='aluno',
            name='curso',
            field=models.ForeignKey(default=1, on_delete=django.db.models.deletion.CASCADE, to='core.curso'),
            preserve_default=False,
        ),
        migrations.AddField(
            model_name='aluno',
            name='periodo',
            field=models.IntegerField(choices=[(1, 'Primeiro'), (2, 'Segundo'), (3, 'Terceiro'), (4, 'Quarto'), (5, 'Quinto'), (6, 'Sexto'), (7, 'Setimo'), (8, 'Oitavo'), (9, 'Nono'), (10, 'Decimo')], default=1),
        ),
        migrations.AddField(
            model_name='contrato',
            name='status',
            field=models.CharField(choices=[('pendente', 'Pendente'), ('analise_sec', 'Análise Secretaria'), ('aprovado', 'Aprovado'), ('reprovado', 'Reprovado')], default='pendente', max_length=15),
        ),
        migrations.AlterField(
            model_name='aluno',
            name='matricula',
            field=models.CharField(db_index=True, editable=False, max_length=30, unique=True, verbose_name='Matrícula'),
        ),
        migrations.AlterField(
            model_name='processo',
            name='status',
            field=models.CharField(choices=[('aberto', 'Aberto'), ('pendente', 'Pendente'), ('reprovado', 'Reprovado'), ('concluido', 'Concluido'), ('cancelado', 'Cancelado')], default='aberto', max_length=15),
        ),
        migrations.CreateModel(
            name='Coordenador',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('matricula', models.CharField(db_index=True, editable=False, max_length=30, unique=True, verbose_name='Matrícula')),
                ('nome', models.CharField(max_length=255, verbose_name='Nome')),
                ('email', models.EmailField(max_length=254, verbose_name='E-mail')),
                ('senha', models.CharField(max_length=255, verbose_name='Senha')),
                ('unidade', models.CharField(choices=[('barra', 'Barra'), ('botafogo', 'Botafogo')], max_length=15)),
                ('areaId', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='core.area')),
            ],
            options={
                'verbose_name': 'Coordenador',
                'verbose_name_plural': 'Coordenadores',
            },
        ),
        migrations.CreateModel(
            name='Relatorio',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('arquivo', models.FileField(upload_to=core.services.upload_relatorio_path, verbose_name='url do arquivo')),
                ('data_upload', models.DateField(default=datetime.datetime(2026, 5, 21, 20, 30, 51, 612150, tzinfo=datetime.timezone.utc), verbose_name='Data de upload')),
                ('horas_trabalhadas', models.IntegerField(verbose_name='Horas trabalhadas')),
                ('data_inicio', models.DateField(verbose_name='Data de início do relatório')),
                ('data_termino', models.DateField(verbose_name='Data de término do relatório')),
                ('status', models.CharField(choices=[('pendente', 'Pendente'), ('analise_coord', 'Análise Coordenação'), ('aprovado', 'Aprovado'), ('reprovado', 'Reprovado')], default='pendente', max_length=15)),
                ('processo_id', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='core.processo')),
            ],
        ),
        migrations.CreateModel(
            name='HistoricoAvaliacaoRelatorio',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('observacoes', models.TextField(verbose_name='Observações')),
                ('data_avaliacao', models.DateField(default=datetime.datetime(2026, 5, 21, 20, 30, 51, 612852, tzinfo=datetime.timezone.utc), verbose_name='Data de avaliação')),
                ('veredito', models.CharField(choices=[('aprovado', 'Aprovado'), ('reprovado', 'Reprovado')], max_length=20, verbose_name='Veredito')),
                ('avaliador', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='core.coordenador')),
                ('relatorio_id', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to='core.relatorio')),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='HistoricoAvaliacaoContrato',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('observacoes', models.TextField(verbose_name='Observações')),
                ('data_avaliacao', models.DateField(default=datetime.datetime(2026, 5, 21, 20, 30, 51, 612852, tzinfo=datetime.timezone.utc), verbose_name='Data de avaliação')),
                ('veredito', models.CharField(choices=[('aprovado', 'Aprovado'), ('reprovado', 'Reprovado')], max_length=20, verbose_name='Veredito')),
                ('contrato_id', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to='core.contrato')),
                ('avaliador', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='core.secretaria')),
            ],
            options={
                'abstract': False,
            },
        ),
    ]
